--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,5 +9,8 @@
 	LOGIN:<input id="un" type="text"/><input id="ph" type="text"/><input id="login" type="button" value="login"/><br>
 	GNODE:<input id="gnid" type="text"/><input id="gnode" type="button" value="Get"/><br>
 	INODE:<input id="inid" type="text"/><input id="inp" type="text"/><input id="inc" type="text"/><input id="inode" type="button" value="Insert"/><br>
+	<div id="results">
+	
+	</div>
     </body>
 </html>
