Refining operation of insert and test files.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,5 +8,13 @@
     <body>
 	<div id="main">
 	</div>
+	<div id="context-menu">
+		<div class="menu-item">
+			<b>PME Menu</b><hr>
+		</div>
+		<div class="menu-item" id="insert_node" insert-parent="">
+			Insert Node
+		</div>
+	</div>
     </body>
 </html>
